plugins {
    id 'java-library'
    id 'maven-publish'
    id 'signing'
    id 'com.vanniktech.maven.publish' version '0.30.0'
    id 'net.neoforged.gradle.userdev' version '7.1.38'
    id 'org.jetbrains.kotlin.jvm'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

sourceSets.main.resources {
    srcDir('src/generated/resources')

    exclude("**/*.bbmodel")
    exclude("src/generated/**/.cache")
}

repositories {
    mavenCentral()
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

tasks.withType(Javadoc).configureEach {
    options.addStringOption('Xdoclint:none', '-quiet')
    options.encoding = 'UTF-8'
}

runs {
    configureEach {
        systemProperty 'forge.logging.markers', 'REGISTRIES'

        systemProperty 'forge.logging.console.level', 'debug'

        workingDirectory project.layout.projectDirectory.dir('run').dir(name)

        modSource project.sourceSets.main
    }

    client {
        systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id

        arguments '--width', '1708', '--height', '960'
    }

    server {
        systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        argument '--nogui'
    }

    gameTestServer {
        systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
    }

    clientData {
        arguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    implementation "net.neoforged:neoforge:${neo_version}"
    testImplementation 'org.jetbrains.kotlin:kotlin-test'
}


tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

signing {
    useGpgCmd()
}

mavenPublishing {
    publishToMavenCentral(com.vanniktech.maven.publish.SonatypeHost.CENTRAL_PORTAL)
    if (findProperty('signingKey') != null && !findProperty('signingKey').toString().trim().isEmpty()) {
        signAllPublications()
    }

    coordinates(mod_group_id, mod_id, mod_version)

    pom {
        name = mod_name
        description = 'A high-performance server-authoritative particle effects library for NeoForge.'
        url = 'https://github.com/NekoWs/ParticleDrawing'
        licenses {
            license {
                name = 'Apache License, Version 2.0'
                url = 'https://www.apache.org/licenses/LICENSE-2.0.txt'
                distribution = 'repo'
            }
        }
        developers {
            developer {
                id = 'NekoWs'
                name = 'NekoWs'
            }
        }
        scm {
            connection = 'scm:git:https://github.com/NekoWs/ParticleDrawing.git'
            developerConnection = 'scm:git:ssh://git@github.com/NekoWs/ParticleDrawing.git'
            url = 'https://github.com/NekoWs/ParticleDrawing'
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' }

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
kotlin {
    jvmToolchain(25)
}
